// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#buildAccountAndImageScansRelationship should build image scans and account relationship 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "sysdig_account:50003375",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "accessKey": "1be2fe7d-f00f-4513-9a15-1384c35d8497",
            "additionalRoles": Array [],
            "agentInstallParams": Object {
              "accessKey": "1be2fe7d-f00f-4513-9a15-1384c35d8497",
              "checkCertificate": true,
              "collectorAddress": "ingest.us4.sysdig.com",
              "collectorPort": 6443,
              "sslEnabled": true,
            },
            "currentTeam": 50006626,
            "customer": Object {
              "accessKey": "1be2fe7d-f00f-4513-9a15-1384c35d8497",
              "dateCreated": 1661791442836,
              "externalId": "fbd8b3fc-781c-4e7f-afac-a2ee9309f4c9",
              "id": 5001686,
              "name": null,
            },
            "customerSettings": Object {
              "environment": Object {},
              "plan": Object {
                "allocatedAgentsCount": 15,
                "indirectCustomer": false,
                "maxAgents": 15,
                "maxTeams": -1,
                "metricsSettings": Object {
                  "enableGlobalK8sAllPodContainers": false,
                  "enablePromCalculatedIngestion": false,
                  "enablePromScrapeV2": true,
                  "enforce": false,
                  "enforceAgentAggregation": true,
                  "limits": Object {
                    "appCheck": 500,
                    "appCheckAggregationCount": 12,
                    "connections": 80,
                    "containerDensity": 200,
                    "containerServerPorts": 5,
                    "hostServerPorts": 10,
                    "jmx": 500,
                    "kubernetesJobs": 10000,
                    "kubernetesPods": 10000,
                    "limitKubernetesResources": false,
                    "meerkatSuited": true,
                    "progAggregationCount": 12,
                    "promMetricsWeight": 0,
                    "prometheus": 8000,
                    "prometheusPerProcess": 500,
                    "statsd": 1000,
                    "topDevicesCount": 10,
                    "topFilesCount": 10,
                  },
                  "showExperimentals": false,
                },
                "migratedToV2Direct": false,
                "monitorEnabled": false,
                "onDemandAgents": 0,
                "overageAssessmentEligible": false,
                "partner": "Direct",
                "paymentsIntegrationId": Object {
                  "id": "not present",
                  "ttl": Object {
                    "ttl": 43,
                  },
                },
                "pricingPlan": "pro",
                "secureEnabled": true,
                "subscriptionState": "trialing",
                "subscriptionVersion": 2,
                "timelines": Array [
                  Object {
                    "from": null,
                    "sampling": 10000000,
                    "to": null,
                  },
                  Object {
                    "from": null,
                    "sampling": 60000000,
                    "to": null,
                  },
                  Object {
                    "from": null,
                    "sampling": 600000000,
                    "to": null,
                  },
                  Object {
                    "from": null,
                    "sampling": 3600000000,
                    "to": null,
                  },
                  Object {
                    "from": null,
                    "sampling": 86400000000,
                    "to": null,
                  },
                ],
                "trialEndDate": 1664383443236,
                "trialPlanName": "secure-enterprise-standard-monthly",
              },
              "sysdig": Object {
                "buckets": Array [],
                "enabled": false,
                "enabledSSE": false,
              },
            },
            "dateActivated": 1661791669709,
            "dateCreated": 1661791442936,
            "enabled": true,
            "firstName": "Stefan",
            "id": 50003375,
            "intercomUserIdHash": "7941192844d448aedd650df4bd26799efd5fca275a1f1eef775ee67b6cf061ad",
            "lastName": "Virag",
            "lastSeenOnSecure": 1663673258108,
            "lastUpdated": 1663673258108,
            "name": "stefan.virag@contractor.jupiterone.com",
            "oauth": false,
            "pictureUrl": "http://www.gravatar.com/avatar/ba5b87ffa4527a556b5f6da95fe36fe5",
            "products": Array [
              "SDS",
              "SDC",
            ],
            "properties": Object {
              "has_been_invited": false,
            },
            "remoteWriteParams": Object {
              "serverAddress": "app.us4.sysdig.com",
            },
            "resetPassword": false,
            "status": "confirmed",
            "systemRole": "ROLE_CUSTOMER",
            "teamRoles": Array [
              Object {
                "admin": true,
                "role": "ROLE_TEAM_MANAGER",
                "teamId": 50006626,
                "teamName": "Secure Operations",
                "teamTheme": "#7BB0B2",
                "userId": 50003375,
                "userName": "stefan.virag@contractor.jupiterone.com",
              },
              Object {
                "admin": true,
                "role": "ROLE_TEAM_MANAGER",
                "teamId": 50006625,
                "teamName": "Monitor Operations",
                "teamTheme": "#7BB0B2",
                "userId": 50003375,
                "userName": "stefan.virag@contractor.jupiterone.com",
              },
            ],
            "termsAndConditions": true,
            "timezone": "+00:00",
            "uniqueIntercomUserId": "50003375.fbd8b3fc-781c-4e7f-afac-a2ee9309f4c9",
            "username": "stefan.virag@contractor.jupiterone.com",
            "version": 2,
          },
        },
      ],
      "_type": "sysdig_account",
      "active": undefined,
      "createdOn": undefined,
      "displayName": "Stefan Virag",
      "id": "50003375",
      "name": "stefan.virag@contractor.jupiterone.com",
      "status": "confirmed",
      "username": "stefan.virag@contractor.jupiterone.com",
    },
    Object {
      "_class": Array [
        "Assessment",
      ],
      "_key": "sysdig_image_scan:17144f2f45c295bc2fdcae5db51044ca",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "fixablePackages": Array [],
            "id": "17144f2f45c295bc2fdcae5db51044ca",
            "isEVEEnabled": false,
            "labels": null,
            "metadata": Object {
              "architecture": "amd64",
              "author": "",
              "baseOS": "debian 11.5",
              "createdAt": "2022-09-13T00:56:19.369186372Z",
              "digest": "debian@sha256:73060f9fdf46e142b63fddde45759f12aea093156445c32ab667338d0563f5c4",
              "imageId": "sha256:43d28810c1b4c28a1be3bac8e0e40fcc472b2bfcfcda952544ed99cb874d2b1a",
              "labels": null,
              "layersCount": 1,
              "os": "linux",
              "pullString": "debian",
              "size": 129313792,
            },
            "packageCount": 96,
            "packageTypes": Array [
              "os",
            ],
            "policyEvaluations": Array [
              Object {
                "creationTimestamp": "2022-09-02T11:58:59.03062Z",
                "evaluationResult": "failed",
                "failuresCount": Object {
                  "imageConfigCreationDate": 0,
                  "imageConfigDefaultUser": 0,
                  "imageConfigEnvVariable": 0,
                  "imageConfigInstructionIsPkgManager": 0,
                  "imageConfigInstructionNotRecommended": 0,
                  "imageConfigLabel": 0,
                  "imageConfigSensitiveInformationAndSecrets": 0,
                  "vulnDenyList": 0,
                  "vulnSeverityAndThreats": 2,
                },
                "id": "17144f2f45c295bc9785414e83306ba9",
                "identifier": "sysdig_best_practices",
                "name": "Sysdig Best Practices",
                "policyType": "alwaysApply",
                "updateTimestamp": "2022-09-02T11:58:59.03062Z",
              },
            ],
            "runningFixablePackages": null,
            "storedAt": "2022-09-13T03:53:46.858993084Z",
            "type": "dockerImage",
            "vulnsBySev": Array [
              Object {
                "fixableCount": 0,
                "totalCount": 0,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 0,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 1,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 5,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 0,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 1,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 5,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 52,
              },
            ],
          },
        },
      ],
      "_type": "sysdig_image_scan",
      "category": "Image Scan",
      "createdOn": undefined,
      "displayName": "debian",
      "fixablePackages": Array [],
      "id": "17144f2f45c295bc2fdcae5db51044ca",
      "internal": false,
      "metadata.architecture": "amd64",
      "metadata.author": "",
      "metadata.baseOS": "debian 11.5",
      "metadata.createdAt": 1663030579369,
      "metadata.digest": "debian@sha256:73060f9fdf46e142b63fddde45759f12aea093156445c32ab667338d0563f5c4",
      "metadata.imageId": "sha256:43d28810c1b4c28a1be3bac8e0e40fcc472b2bfcfcda952544ed99cb874d2b1a",
      "metadata.labels": null,
      "metadata.layersCount": 1,
      "metadata.os": "linux",
      "metadata.pullString": "debian",
      "metadata.size": 129313792,
      "name": "debian",
      "packageCount": 96,
      "packageTypes": Array [
        "os",
      ],
      "runningFixablePackages": null,
      "storedAt": 1663041226858,
      "summary": "Image Scan",
      "type": "dockerImage",
      "vulnsBySev": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
    },
    Object {
      "_class": Array [
        "Assessment",
      ],
      "_key": "sysdig_image_scan:17140adb60b1639a2f8d615f88de1bfa",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "fixablePackages": Array [
              Object {
                "exploitCount": 0,
                "id": "17140adb60b1639ad35b4c1a76a5fba9",
                "name": "libpcre2-8-0",
                "suggestedFix": "10.36-2+deb11u1",
                "type": "os",
                "version": "10.36-2",
                "vulnsBySev": Array [
                  0,
                  0,
                  2,
                  0,
                  0,
                  0,
                  0,
                  0,
                ],
              },
              Object {
                "exploitCount": 0,
                "id": "17140adb60b1639a3c88473e6e13338a",
                "name": "zlib1g",
                "suggestedFix": "1:1.2.11.dfsg-2+deb11u2",
                "type": "os",
                "version": "1:1.2.11.dfsg-2+deb11u1",
                "vulnsBySev": Array [
                  0,
                  0,
                  1,
                  0,
                  0,
                  0,
                  0,
                  0,
                ],
              },
              Object {
                "exploitCount": 0,
                "id": "17140adb60b1639a39c15c260c5fdaf2",
                "name": "libc6",
                "suggestedFix": "2.31-13+deb11u4",
                "type": "os",
                "version": "2.31-13+deb11u3",
                "vulnsBySev": Array [
                  0,
                  0,
                  0,
                  1,
                  0,
                  0,
                  0,
                  6,
                ],
              },
              Object {
                "exploitCount": 0,
                "id": "17140adb60b1639aaa5ddbdf428888b5",
                "name": "libc-bin",
                "suggestedFix": "2.31-13+deb11u4",
                "type": "os",
                "version": "2.31-13+deb11u3",
                "vulnsBySev": Array [
                  0,
                  0,
                  0,
                  1,
                  0,
                  0,
                  0,
                  6,
                ],
              },
            ],
            "id": "17140adb60b1639a2f8d615f88de1bfa",
            "isEVEEnabled": false,
            "labels": null,
            "metadata": Object {
              "architecture": "amd64",
              "author": "",
              "baseOS": "debian 11.4",
              "createdAt": "2022-08-23T00:20:40.700966019Z",
              "digest": "debian@sha256:d52921d97310d0bd48dab928548ef539d5c88c743165754c57cfad003031386c",
              "imageId": "sha256:dd8bae8d259fed93eb54b3bca0adeb647fc07f6ef16745c8ed4144ada4d51a95",
              "labels": null,
              "layersCount": 1,
              "os": "linux",
              "pullString": "debian",
              "size": 129216000,
            },
            "packageCount": 96,
            "packageTypes": Array [
              "os",
            ],
            "policyEvaluations": Array [
              Object {
                "creationTimestamp": "2022-09-02T11:58:59.03062Z",
                "evaluationResult": "failed",
                "failuresCount": Object {
                  "imageConfigCreationDate": 0,
                  "imageConfigDefaultUser": 0,
                  "imageConfigEnvVariable": 0,
                  "imageConfigInstructionIsPkgManager": 0,
                  "imageConfigInstructionNotRecommended": 0,
                  "imageConfigLabel": 0,
                  "imageConfigSensitiveInformationAndSecrets": 0,
                  "vulnDenyList": 0,
                  "vulnSeverityAndThreats": 13,
                },
                "id": "17140adb60b1639a9bc2d5b0f765e4d2",
                "identifier": "sysdig_best_practices",
                "name": "Sysdig Best Practices",
                "policyType": "alwaysApply",
                "updateTimestamp": "2022-09-02T11:58:59.03062Z",
              },
            ],
            "runningFixablePackages": null,
            "storedAt": "2022-09-12T07:01:39.742909338Z",
            "type": "dockerImage",
            "vulnsBySev": Array [
              Object {
                "fixableCount": 0,
                "totalCount": 0,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 0,
              },
              Object {
                "fixableCount": 3,
                "totalCount": 4,
              },
              Object {
                "fixableCount": 2,
                "totalCount": 7,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 0,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 1,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 5,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 52,
              },
            ],
          },
        },
      ],
      "_type": "sysdig_image_scan",
      "category": "Image Scan",
      "createdOn": undefined,
      "displayName": "debian",
      "fixablePackages": Array [
        Object {
          "exploitCount": 0,
          "id": "17140adb60b1639ad35b4c1a76a5fba9",
          "name": "libpcre2-8-0",
          "suggestedFix": "10.36-2+deb11u1",
          "type": "os",
          "version": "10.36-2",
          "vulnsBySev": Array [
            0,
            0,
            2,
            0,
            0,
            0,
            0,
            0,
          ],
        },
        Object {
          "exploitCount": 0,
          "id": "17140adb60b1639a3c88473e6e13338a",
          "name": "zlib1g",
          "suggestedFix": "1:1.2.11.dfsg-2+deb11u2",
          "type": "os",
          "version": "1:1.2.11.dfsg-2+deb11u1",
          "vulnsBySev": Array [
            0,
            0,
            1,
            0,
            0,
            0,
            0,
            0,
          ],
        },
        Object {
          "exploitCount": 0,
          "id": "17140adb60b1639a39c15c260c5fdaf2",
          "name": "libc6",
          "suggestedFix": "2.31-13+deb11u4",
          "type": "os",
          "version": "2.31-13+deb11u3",
          "vulnsBySev": Array [
            0,
            0,
            0,
            1,
            0,
            0,
            0,
            6,
          ],
        },
        Object {
          "exploitCount": 0,
          "id": "17140adb60b1639aaa5ddbdf428888b5",
          "name": "libc-bin",
          "suggestedFix": "2.31-13+deb11u4",
          "type": "os",
          "version": "2.31-13+deb11u3",
          "vulnsBySev": Array [
            0,
            0,
            0,
            1,
            0,
            0,
            0,
            6,
          ],
        },
      ],
      "id": "17140adb60b1639a2f8d615f88de1bfa",
      "internal": false,
      "metadata.architecture": "amd64",
      "metadata.author": "",
      "metadata.baseOS": "debian 11.4",
      "metadata.createdAt": 1661214040700,
      "metadata.digest": "debian@sha256:d52921d97310d0bd48dab928548ef539d5c88c743165754c57cfad003031386c",
      "metadata.imageId": "sha256:dd8bae8d259fed93eb54b3bca0adeb647fc07f6ef16745c8ed4144ada4d51a95",
      "metadata.labels": null,
      "metadata.layersCount": 1,
      "metadata.os": "linux",
      "metadata.pullString": "debian",
      "metadata.size": 129216000,
      "name": "debian",
      "packageCount": 96,
      "packageTypes": Array [
        "os",
      ],
      "runningFixablePackages": null,
      "storedAt": 1662966099742,
      "summary": "Image Scan",
      "type": "dockerImage",
      "vulnsBySev": Array [
        0,
        0,
        3,
        2,
        0,
        0,
        0,
        0,
      ],
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "sysdig_account:50003375",
      "_key": "sysdig_account:50003375|has|sysdig_image_scan:17144f2f45c295bc2fdcae5db51044ca",
      "_toEntityKey": "sysdig_image_scan:17144f2f45c295bc2fdcae5db51044ca",
      "_type": "sysdig_account_has_image_scan",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "sysdig_account:50003375",
      "_key": "sysdig_account:50003375|has|sysdig_image_scan:17140adb60b1639a2f8d615f88de1bfa",
      "_toEntityKey": "sysdig_image_scan:17140adb60b1639a2f8d615f88de1bfa",
      "_type": "sysdig_account_has_image_scan",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "sysdig_account",
    "sysdig_image_scan",
    "sysdig_account_has_image_scan",
  ],
  "numCollectedEntities": 3,
}
`;

exports[`#buildScannerAndImageScansRelationship should build image scans and scanner relationship 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "sysdig_scanner:50003375",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "accessKey": "1be2fe7d-f00f-4513-9a15-1384c35d8497",
            "additionalRoles": Array [],
            "agentInstallParams": Object {
              "accessKey": "1be2fe7d-f00f-4513-9a15-1384c35d8497",
              "checkCertificate": true,
              "collectorAddress": "ingest.us4.sysdig.com",
              "collectorPort": 6443,
              "sslEnabled": true,
            },
            "currentTeam": 50006626,
            "customer": Object {
              "accessKey": "1be2fe7d-f00f-4513-9a15-1384c35d8497",
              "dateCreated": 1661791442836,
              "externalId": "fbd8b3fc-781c-4e7f-afac-a2ee9309f4c9",
              "id": 5001686,
              "name": null,
            },
            "customerSettings": Object {
              "environment": Object {},
              "plan": Object {
                "allocatedAgentsCount": 15,
                "indirectCustomer": false,
                "maxAgents": 15,
                "maxTeams": -1,
                "metricsSettings": Object {
                  "enableGlobalK8sAllPodContainers": false,
                  "enablePromCalculatedIngestion": false,
                  "enablePromScrapeV2": true,
                  "enforce": false,
                  "enforceAgentAggregation": true,
                  "limits": Object {
                    "appCheck": 500,
                    "appCheckAggregationCount": 12,
                    "connections": 80,
                    "containerDensity": 200,
                    "containerServerPorts": 5,
                    "hostServerPorts": 10,
                    "jmx": 500,
                    "kubernetesJobs": 10000,
                    "kubernetesPods": 10000,
                    "limitKubernetesResources": false,
                    "meerkatSuited": true,
                    "progAggregationCount": 12,
                    "promMetricsWeight": 0,
                    "prometheus": 8000,
                    "prometheusPerProcess": 500,
                    "statsd": 1000,
                    "topDevicesCount": 10,
                    "topFilesCount": 10,
                  },
                  "showExperimentals": false,
                },
                "migratedToV2Direct": false,
                "monitorEnabled": false,
                "onDemandAgents": 0,
                "overageAssessmentEligible": false,
                "partner": "Direct",
                "paymentsIntegrationId": Object {
                  "id": "not present",
                  "ttl": Object {
                    "ttl": 43,
                  },
                },
                "pricingPlan": "pro",
                "secureEnabled": true,
                "subscriptionState": "trialing",
                "subscriptionVersion": 2,
                "timelines": Array [
                  Object {
                    "from": null,
                    "sampling": 10000000,
                    "to": null,
                  },
                  Object {
                    "from": null,
                    "sampling": 60000000,
                    "to": null,
                  },
                  Object {
                    "from": null,
                    "sampling": 600000000,
                    "to": null,
                  },
                  Object {
                    "from": null,
                    "sampling": 3600000000,
                    "to": null,
                  },
                  Object {
                    "from": null,
                    "sampling": 86400000000,
                    "to": null,
                  },
                ],
                "trialEndDate": 1664383443236,
                "trialPlanName": "secure-enterprise-standard-monthly",
              },
              "sysdig": Object {
                "buckets": Array [],
                "enabled": false,
                "enabledSSE": false,
              },
            },
            "dateActivated": 1661791669709,
            "dateCreated": 1661791442936,
            "enabled": true,
            "firstName": "Stefan",
            "id": 50003375,
            "intercomUserIdHash": "7941192844d448aedd650df4bd26799efd5fca275a1f1eef775ee67b6cf061ad",
            "lastName": "Virag",
            "lastSeenOnSecure": 1663673258108,
            "lastUpdated": 1663673258108,
            "name": "stefan.virag@contractor.jupiterone.com",
            "oauth": false,
            "pictureUrl": "http://www.gravatar.com/avatar/ba5b87ffa4527a556b5f6da95fe36fe5",
            "products": Array [
              "SDS",
              "SDC",
            ],
            "properties": Object {
              "has_been_invited": false,
            },
            "remoteWriteParams": Object {
              "serverAddress": "app.us4.sysdig.com",
            },
            "resetPassword": false,
            "status": "confirmed",
            "systemRole": "ROLE_CUSTOMER",
            "teamRoles": Array [
              Object {
                "admin": true,
                "role": "ROLE_TEAM_MANAGER",
                "teamId": 50006626,
                "teamName": "Secure Operations",
                "teamTheme": "#7BB0B2",
                "userId": 50003375,
                "userName": "stefan.virag@contractor.jupiterone.com",
              },
              Object {
                "admin": true,
                "role": "ROLE_TEAM_MANAGER",
                "teamId": 50006625,
                "teamName": "Monitor Operations",
                "teamTheme": "#7BB0B2",
                "userId": 50003375,
                "userName": "stefan.virag@contractor.jupiterone.com",
              },
            ],
            "termsAndConditions": true,
            "timezone": "+00:00",
            "uniqueIntercomUserId": "50003375.fbd8b3fc-781c-4e7f-afac-a2ee9309f4c9",
            "username": "stefan.virag@contractor.jupiterone.com",
            "version": 2,
          },
        },
      ],
      "_type": "sysdig_scanner",
      "active": undefined,
      "category": Array [
        "image",
      ],
      "createdOn": undefined,
      "displayName": "Stefan Virag",
      "function": Array [
        "scanning",
      ],
      "id": "50003375",
      "name": "stefan.virag@contractor.jupiterone.com",
      "products": Array [
        "SDS",
        "SDC",
      ],
      "status": "confirmed",
      "username": "stefan.virag@contractor.jupiterone.com",
      "version": 2,
    },
    Object {
      "_class": Array [
        "Assessment",
      ],
      "_key": "sysdig_image_scan:17144f2f45c295bc2fdcae5db51044ca",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "fixablePackages": Array [],
            "id": "17144f2f45c295bc2fdcae5db51044ca",
            "isEVEEnabled": false,
            "labels": null,
            "metadata": Object {
              "architecture": "amd64",
              "author": "",
              "baseOS": "debian 11.5",
              "createdAt": "2022-09-13T00:56:19.369186372Z",
              "digest": "debian@sha256:73060f9fdf46e142b63fddde45759f12aea093156445c32ab667338d0563f5c4",
              "imageId": "sha256:43d28810c1b4c28a1be3bac8e0e40fcc472b2bfcfcda952544ed99cb874d2b1a",
              "labels": null,
              "layersCount": 1,
              "os": "linux",
              "pullString": "debian",
              "size": 129313792,
            },
            "packageCount": 96,
            "packageTypes": Array [
              "os",
            ],
            "policyEvaluations": Array [
              Object {
                "creationTimestamp": "2022-09-02T11:58:59.03062Z",
                "evaluationResult": "failed",
                "failuresCount": Object {
                  "imageConfigCreationDate": 0,
                  "imageConfigDefaultUser": 0,
                  "imageConfigEnvVariable": 0,
                  "imageConfigInstructionIsPkgManager": 0,
                  "imageConfigInstructionNotRecommended": 0,
                  "imageConfigLabel": 0,
                  "imageConfigSensitiveInformationAndSecrets": 0,
                  "vulnDenyList": 0,
                  "vulnSeverityAndThreats": 2,
                },
                "id": "17144f2f45c295bc9785414e83306ba9",
                "identifier": "sysdig_best_practices",
                "name": "Sysdig Best Practices",
                "policyType": "alwaysApply",
                "updateTimestamp": "2022-09-02T11:58:59.03062Z",
              },
            ],
            "runningFixablePackages": null,
            "storedAt": "2022-09-13T03:53:46.858993084Z",
            "type": "dockerImage",
            "vulnsBySev": Array [
              Object {
                "fixableCount": 0,
                "totalCount": 0,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 0,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 1,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 5,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 0,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 1,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 5,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 52,
              },
            ],
          },
        },
      ],
      "_type": "sysdig_image_scan",
      "category": "Image Scan",
      "createdOn": undefined,
      "displayName": "debian",
      "fixablePackages": Array [],
      "id": "17144f2f45c295bc2fdcae5db51044ca",
      "internal": false,
      "metadata.architecture": "amd64",
      "metadata.author": "",
      "metadata.baseOS": "debian 11.5",
      "metadata.createdAt": 1663030579369,
      "metadata.digest": "debian@sha256:73060f9fdf46e142b63fddde45759f12aea093156445c32ab667338d0563f5c4",
      "metadata.imageId": "sha256:43d28810c1b4c28a1be3bac8e0e40fcc472b2bfcfcda952544ed99cb874d2b1a",
      "metadata.labels": null,
      "metadata.layersCount": 1,
      "metadata.os": "linux",
      "metadata.pullString": "debian",
      "metadata.size": 129313792,
      "name": "debian",
      "packageCount": 96,
      "packageTypes": Array [
        "os",
      ],
      "runningFixablePackages": null,
      "storedAt": 1663041226858,
      "summary": "Image Scan",
      "type": "dockerImage",
      "vulnsBySev": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
    },
    Object {
      "_class": Array [
        "Assessment",
      ],
      "_key": "sysdig_image_scan:17140adb60b1639a2f8d615f88de1bfa",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "fixablePackages": Array [
              Object {
                "exploitCount": 0,
                "id": "17140adb60b1639ad35b4c1a76a5fba9",
                "name": "libpcre2-8-0",
                "suggestedFix": "10.36-2+deb11u1",
                "type": "os",
                "version": "10.36-2",
                "vulnsBySev": Array [
                  0,
                  0,
                  2,
                  0,
                  0,
                  0,
                  0,
                  0,
                ],
              },
              Object {
                "exploitCount": 0,
                "id": "17140adb60b1639a3c88473e6e13338a",
                "name": "zlib1g",
                "suggestedFix": "1:1.2.11.dfsg-2+deb11u2",
                "type": "os",
                "version": "1:1.2.11.dfsg-2+deb11u1",
                "vulnsBySev": Array [
                  0,
                  0,
                  1,
                  0,
                  0,
                  0,
                  0,
                  0,
                ],
              },
              Object {
                "exploitCount": 0,
                "id": "17140adb60b1639a39c15c260c5fdaf2",
                "name": "libc6",
                "suggestedFix": "2.31-13+deb11u4",
                "type": "os",
                "version": "2.31-13+deb11u3",
                "vulnsBySev": Array [
                  0,
                  0,
                  0,
                  1,
                  0,
                  0,
                  0,
                  6,
                ],
              },
              Object {
                "exploitCount": 0,
                "id": "17140adb60b1639aaa5ddbdf428888b5",
                "name": "libc-bin",
                "suggestedFix": "2.31-13+deb11u4",
                "type": "os",
                "version": "2.31-13+deb11u3",
                "vulnsBySev": Array [
                  0,
                  0,
                  0,
                  1,
                  0,
                  0,
                  0,
                  6,
                ],
              },
            ],
            "id": "17140adb60b1639a2f8d615f88de1bfa",
            "isEVEEnabled": false,
            "labels": null,
            "metadata": Object {
              "architecture": "amd64",
              "author": "",
              "baseOS": "debian 11.4",
              "createdAt": "2022-08-23T00:20:40.700966019Z",
              "digest": "debian@sha256:d52921d97310d0bd48dab928548ef539d5c88c743165754c57cfad003031386c",
              "imageId": "sha256:dd8bae8d259fed93eb54b3bca0adeb647fc07f6ef16745c8ed4144ada4d51a95",
              "labels": null,
              "layersCount": 1,
              "os": "linux",
              "pullString": "debian",
              "size": 129216000,
            },
            "packageCount": 96,
            "packageTypes": Array [
              "os",
            ],
            "policyEvaluations": Array [
              Object {
                "creationTimestamp": "2022-09-02T11:58:59.03062Z",
                "evaluationResult": "failed",
                "failuresCount": Object {
                  "imageConfigCreationDate": 0,
                  "imageConfigDefaultUser": 0,
                  "imageConfigEnvVariable": 0,
                  "imageConfigInstructionIsPkgManager": 0,
                  "imageConfigInstructionNotRecommended": 0,
                  "imageConfigLabel": 0,
                  "imageConfigSensitiveInformationAndSecrets": 0,
                  "vulnDenyList": 0,
                  "vulnSeverityAndThreats": 13,
                },
                "id": "17140adb60b1639a9bc2d5b0f765e4d2",
                "identifier": "sysdig_best_practices",
                "name": "Sysdig Best Practices",
                "policyType": "alwaysApply",
                "updateTimestamp": "2022-09-02T11:58:59.03062Z",
              },
            ],
            "runningFixablePackages": null,
            "storedAt": "2022-09-12T07:01:39.742909338Z",
            "type": "dockerImage",
            "vulnsBySev": Array [
              Object {
                "fixableCount": 0,
                "totalCount": 0,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 0,
              },
              Object {
                "fixableCount": 3,
                "totalCount": 4,
              },
              Object {
                "fixableCount": 2,
                "totalCount": 7,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 0,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 1,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 5,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 52,
              },
            ],
          },
        },
      ],
      "_type": "sysdig_image_scan",
      "category": "Image Scan",
      "createdOn": undefined,
      "displayName": "debian",
      "fixablePackages": Array [
        Object {
          "exploitCount": 0,
          "id": "17140adb60b1639ad35b4c1a76a5fba9",
          "name": "libpcre2-8-0",
          "suggestedFix": "10.36-2+deb11u1",
          "type": "os",
          "version": "10.36-2",
          "vulnsBySev": Array [
            0,
            0,
            2,
            0,
            0,
            0,
            0,
            0,
          ],
        },
        Object {
          "exploitCount": 0,
          "id": "17140adb60b1639a3c88473e6e13338a",
          "name": "zlib1g",
          "suggestedFix": "1:1.2.11.dfsg-2+deb11u2",
          "type": "os",
          "version": "1:1.2.11.dfsg-2+deb11u1",
          "vulnsBySev": Array [
            0,
            0,
            1,
            0,
            0,
            0,
            0,
            0,
          ],
        },
        Object {
          "exploitCount": 0,
          "id": "17140adb60b1639a39c15c260c5fdaf2",
          "name": "libc6",
          "suggestedFix": "2.31-13+deb11u4",
          "type": "os",
          "version": "2.31-13+deb11u3",
          "vulnsBySev": Array [
            0,
            0,
            0,
            1,
            0,
            0,
            0,
            6,
          ],
        },
        Object {
          "exploitCount": 0,
          "id": "17140adb60b1639aaa5ddbdf428888b5",
          "name": "libc-bin",
          "suggestedFix": "2.31-13+deb11u4",
          "type": "os",
          "version": "2.31-13+deb11u3",
          "vulnsBySev": Array [
            0,
            0,
            0,
            1,
            0,
            0,
            0,
            6,
          ],
        },
      ],
      "id": "17140adb60b1639a2f8d615f88de1bfa",
      "internal": false,
      "metadata.architecture": "amd64",
      "metadata.author": "",
      "metadata.baseOS": "debian 11.4",
      "metadata.createdAt": 1661214040700,
      "metadata.digest": "debian@sha256:d52921d97310d0bd48dab928548ef539d5c88c743165754c57cfad003031386c",
      "metadata.imageId": "sha256:dd8bae8d259fed93eb54b3bca0adeb647fc07f6ef16745c8ed4144ada4d51a95",
      "metadata.labels": null,
      "metadata.layersCount": 1,
      "metadata.os": "linux",
      "metadata.pullString": "debian",
      "metadata.size": 129216000,
      "name": "debian",
      "packageCount": 96,
      "packageTypes": Array [
        "os",
      ],
      "runningFixablePackages": null,
      "storedAt": 1662966099742,
      "summary": "Image Scan",
      "type": "dockerImage",
      "vulnsBySev": Array [
        0,
        0,
        3,
        2,
        0,
        0,
        0,
        0,
      ],
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "PERFORMED",
      "_fromEntityKey": "sysdig_scanner:50003375",
      "_key": "sysdig_scanner:50003375|performed|sysdig_image_scan:17144f2f45c295bc2fdcae5db51044ca",
      "_toEntityKey": "sysdig_image_scan:17144f2f45c295bc2fdcae5db51044ca",
      "_type": "sysdig_scanner_performed_image_scan",
      "displayName": "PERFORMED",
    },
    Object {
      "_class": "PERFORMED",
      "_fromEntityKey": "sysdig_scanner:50003375",
      "_key": "sysdig_scanner:50003375|performed|sysdig_image_scan:17140adb60b1639a2f8d615f88de1bfa",
      "_toEntityKey": "sysdig_image_scan:17140adb60b1639a2f8d615f88de1bfa",
      "_type": "sysdig_scanner_performed_image_scan",
      "displayName": "PERFORMED",
    },
  ],
  "encounteredTypes": Array [
    "sysdig_scanner",
    "sysdig_image_scan",
    "sysdig_scanner_performed_image_scan",
  ],
  "numCollectedEntities": 3,
}
`;

exports[`#fetchImageScans should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Assessment",
      ],
      "_key": "sysdig_image_scan:17144f2f45c295bc2fdcae5db51044ca",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "fixablePackages": Array [],
            "id": "17144f2f45c295bc2fdcae5db51044ca",
            "isEVEEnabled": false,
            "labels": null,
            "metadata": Object {
              "architecture": "amd64",
              "author": "",
              "baseOS": "debian 11.5",
              "createdAt": "2022-09-13T00:56:19.369186372Z",
              "digest": "debian@sha256:73060f9fdf46e142b63fddde45759f12aea093156445c32ab667338d0563f5c4",
              "imageId": "sha256:43d28810c1b4c28a1be3bac8e0e40fcc472b2bfcfcda952544ed99cb874d2b1a",
              "labels": null,
              "layersCount": 1,
              "os": "linux",
              "pullString": "debian",
              "size": 129313792,
            },
            "packageCount": 96,
            "packageTypes": Array [
              "os",
            ],
            "policyEvaluations": Array [
              Object {
                "creationTimestamp": "2022-09-02T11:58:59.03062Z",
                "evaluationResult": "failed",
                "failuresCount": Object {
                  "imageConfigCreationDate": 0,
                  "imageConfigDefaultUser": 0,
                  "imageConfigEnvVariable": 0,
                  "imageConfigInstructionIsPkgManager": 0,
                  "imageConfigInstructionNotRecommended": 0,
                  "imageConfigLabel": 0,
                  "imageConfigSensitiveInformationAndSecrets": 0,
                  "vulnDenyList": 0,
                  "vulnSeverityAndThreats": 2,
                },
                "id": "17144f2f45c295bc9785414e83306ba9",
                "identifier": "sysdig_best_practices",
                "name": "Sysdig Best Practices",
                "policyType": "alwaysApply",
                "updateTimestamp": "2022-09-02T11:58:59.03062Z",
              },
            ],
            "runningFixablePackages": null,
            "storedAt": "2022-09-13T03:53:46.858993084Z",
            "type": "dockerImage",
            "vulnsBySev": Array [
              Object {
                "fixableCount": 0,
                "totalCount": 0,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 0,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 1,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 5,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 0,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 1,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 5,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 52,
              },
            ],
          },
        },
      ],
      "_type": "sysdig_image_scan",
      "category": "Image Scan",
      "createdOn": undefined,
      "displayName": "debian",
      "fixablePackages": Array [],
      "id": "17144f2f45c295bc2fdcae5db51044ca",
      "internal": false,
      "metadata.architecture": "amd64",
      "metadata.author": "",
      "metadata.baseOS": "debian 11.5",
      "metadata.createdAt": 1663030579369,
      "metadata.digest": "debian@sha256:73060f9fdf46e142b63fddde45759f12aea093156445c32ab667338d0563f5c4",
      "metadata.imageId": "sha256:43d28810c1b4c28a1be3bac8e0e40fcc472b2bfcfcda952544ed99cb874d2b1a",
      "metadata.labels": null,
      "metadata.layersCount": 1,
      "metadata.os": "linux",
      "metadata.pullString": "debian",
      "metadata.size": 129313792,
      "name": "debian",
      "packageCount": 96,
      "packageTypes": Array [
        "os",
      ],
      "runningFixablePackages": null,
      "storedAt": 1663041226858,
      "summary": "Image Scan",
      "type": "dockerImage",
      "vulnsBySev": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
    },
    Object {
      "_class": Array [
        "Assessment",
      ],
      "_key": "sysdig_image_scan:17140adb60b1639a2f8d615f88de1bfa",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "fixablePackages": Array [
              Object {
                "exploitCount": 0,
                "id": "17140adb60b1639ad35b4c1a76a5fba9",
                "name": "libpcre2-8-0",
                "suggestedFix": "10.36-2+deb11u1",
                "type": "os",
                "version": "10.36-2",
                "vulnsBySev": Array [
                  0,
                  0,
                  2,
                  0,
                  0,
                  0,
                  0,
                  0,
                ],
              },
              Object {
                "exploitCount": 0,
                "id": "17140adb60b1639a3c88473e6e13338a",
                "name": "zlib1g",
                "suggestedFix": "1:1.2.11.dfsg-2+deb11u2",
                "type": "os",
                "version": "1:1.2.11.dfsg-2+deb11u1",
                "vulnsBySev": Array [
                  0,
                  0,
                  1,
                  0,
                  0,
                  0,
                  0,
                  0,
                ],
              },
              Object {
                "exploitCount": 0,
                "id": "17140adb60b1639a39c15c260c5fdaf2",
                "name": "libc6",
                "suggestedFix": "2.31-13+deb11u4",
                "type": "os",
                "version": "2.31-13+deb11u3",
                "vulnsBySev": Array [
                  0,
                  0,
                  0,
                  1,
                  0,
                  0,
                  0,
                  6,
                ],
              },
              Object {
                "exploitCount": 0,
                "id": "17140adb60b1639aaa5ddbdf428888b5",
                "name": "libc-bin",
                "suggestedFix": "2.31-13+deb11u4",
                "type": "os",
                "version": "2.31-13+deb11u3",
                "vulnsBySev": Array [
                  0,
                  0,
                  0,
                  1,
                  0,
                  0,
                  0,
                  6,
                ],
              },
            ],
            "id": "17140adb60b1639a2f8d615f88de1bfa",
            "isEVEEnabled": false,
            "labels": null,
            "metadata": Object {
              "architecture": "amd64",
              "author": "",
              "baseOS": "debian 11.4",
              "createdAt": "2022-08-23T00:20:40.700966019Z",
              "digest": "debian@sha256:d52921d97310d0bd48dab928548ef539d5c88c743165754c57cfad003031386c",
              "imageId": "sha256:dd8bae8d259fed93eb54b3bca0adeb647fc07f6ef16745c8ed4144ada4d51a95",
              "labels": null,
              "layersCount": 1,
              "os": "linux",
              "pullString": "debian",
              "size": 129216000,
            },
            "packageCount": 96,
            "packageTypes": Array [
              "os",
            ],
            "policyEvaluations": Array [
              Object {
                "creationTimestamp": "2022-09-02T11:58:59.03062Z",
                "evaluationResult": "failed",
                "failuresCount": Object {
                  "imageConfigCreationDate": 0,
                  "imageConfigDefaultUser": 0,
                  "imageConfigEnvVariable": 0,
                  "imageConfigInstructionIsPkgManager": 0,
                  "imageConfigInstructionNotRecommended": 0,
                  "imageConfigLabel": 0,
                  "imageConfigSensitiveInformationAndSecrets": 0,
                  "vulnDenyList": 0,
                  "vulnSeverityAndThreats": 13,
                },
                "id": "17140adb60b1639a9bc2d5b0f765e4d2",
                "identifier": "sysdig_best_practices",
                "name": "Sysdig Best Practices",
                "policyType": "alwaysApply",
                "updateTimestamp": "2022-09-02T11:58:59.03062Z",
              },
            ],
            "runningFixablePackages": null,
            "storedAt": "2022-09-12T07:01:39.742909338Z",
            "type": "dockerImage",
            "vulnsBySev": Array [
              Object {
                "fixableCount": 0,
                "totalCount": 0,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 0,
              },
              Object {
                "fixableCount": 3,
                "totalCount": 4,
              },
              Object {
                "fixableCount": 2,
                "totalCount": 7,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 0,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 1,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 5,
              },
              Object {
                "fixableCount": 0,
                "totalCount": 52,
              },
            ],
          },
        },
      ],
      "_type": "sysdig_image_scan",
      "category": "Image Scan",
      "createdOn": undefined,
      "displayName": "debian",
      "fixablePackages": Array [
        Object {
          "exploitCount": 0,
          "id": "17140adb60b1639ad35b4c1a76a5fba9",
          "name": "libpcre2-8-0",
          "suggestedFix": "10.36-2+deb11u1",
          "type": "os",
          "version": "10.36-2",
          "vulnsBySev": Array [
            0,
            0,
            2,
            0,
            0,
            0,
            0,
            0,
          ],
        },
        Object {
          "exploitCount": 0,
          "id": "17140adb60b1639a3c88473e6e13338a",
          "name": "zlib1g",
          "suggestedFix": "1:1.2.11.dfsg-2+deb11u2",
          "type": "os",
          "version": "1:1.2.11.dfsg-2+deb11u1",
          "vulnsBySev": Array [
            0,
            0,
            1,
            0,
            0,
            0,
            0,
            0,
          ],
        },
        Object {
          "exploitCount": 0,
          "id": "17140adb60b1639a39c15c260c5fdaf2",
          "name": "libc6",
          "suggestedFix": "2.31-13+deb11u4",
          "type": "os",
          "version": "2.31-13+deb11u3",
          "vulnsBySev": Array [
            0,
            0,
            0,
            1,
            0,
            0,
            0,
            6,
          ],
        },
        Object {
          "exploitCount": 0,
          "id": "17140adb60b1639aaa5ddbdf428888b5",
          "name": "libc-bin",
          "suggestedFix": "2.31-13+deb11u4",
          "type": "os",
          "version": "2.31-13+deb11u3",
          "vulnsBySev": Array [
            0,
            0,
            0,
            1,
            0,
            0,
            0,
            6,
          ],
        },
      ],
      "id": "17140adb60b1639a2f8d615f88de1bfa",
      "internal": false,
      "metadata.architecture": "amd64",
      "metadata.author": "",
      "metadata.baseOS": "debian 11.4",
      "metadata.createdAt": 1661214040700,
      "metadata.digest": "debian@sha256:d52921d97310d0bd48dab928548ef539d5c88c743165754c57cfad003031386c",
      "metadata.imageId": "sha256:dd8bae8d259fed93eb54b3bca0adeb647fc07f6ef16745c8ed4144ada4d51a95",
      "metadata.labels": null,
      "metadata.layersCount": 1,
      "metadata.os": "linux",
      "metadata.pullString": "debian",
      "metadata.size": 129216000,
      "name": "debian",
      "packageCount": 96,
      "packageTypes": Array [
        "os",
      ],
      "runningFixablePackages": null,
      "storedAt": 1662966099742,
      "summary": "Image Scan",
      "type": "dockerImage",
      "vulnsBySev": Array [
        0,
        0,
        3,
        2,
        0,
        0,
        0,
        0,
      ],
    },
  ],
  "encounteredTypes": Array [
    "sysdig_image_scan",
  ],
  "numCollectedEntities": 2,
}
`;
